fixed fonts not showing up using woff files instead. fixed media player

--- a/ace/src/app/globals.css
+++ b/ace/src/app/globals.css
@@ -89,35 +89,35 @@ textarea {
 
 @font-face {
   font-family: 'Heading 1';
-  src: url('/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/PlayfairDisplay-Italic.woff') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Heading 2';
-  src: url('/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/PlayfairDisplay-Italic.woff') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Heading 3';
-  src: url('/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/PlayfairDisplay-Italic.woff') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Heading 4';
-  src: url('/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/PlayfairDisplay-Italic.woff') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Paragraph';
-  src: url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Regular.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
